--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 <body>
 
     <main>
-        <div class="container">
+        <div class="container mlr">
             <div class="panel-left">
                 <div class="logo">
-                    <img src="./images/logo_Facebook.svg" alt="logo_facebook">
+                    <img src="./images/logo_Facebook.svg" alt="logo_facebook" >
                 </div>
-                <h2>
-                    Avec Facebook, partagez et restez en contact avec votre entourage.
-                </h2>
+                <div>
+                    <h2>
+                        Avec Facebook, partagez et restez en contact avec votre entourage.
+                    </h2>
+                </div>
             </div>
 
 
@@ -32,7 +34,7 @@
 
                             <div class="field_name">
                                 <label for="name">name</label>
-                                <input id="name" name="nom" type="text" placeholder="Adresse email ou numero de Téléhpone" />
+                                <input id="name" name="nom" type="text" placeholder="Adresse e-mail ou numéro de Tél." />
                             </div>
 
 
@@ -50,11 +52,11 @@
                     </form>
                    
                     <div class="link-forget">
-                                <a href="#">Mot de passe oublié</a>
+                                <a href="#">Mot de passe oublié?</a>
                     </div>
                     <div class="curve"></div>
                     <div class="creer-compte">
-                        <button>Creer un compte</button>
+                        <button>Créer un compte</button>
                     </div>
 
 
@@ -68,7 +70,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="mlr">
         <div class="header">
             <a href="#">Français (France)</a>
             <a href="#">English (US)</a>
